--- a/templates/question.html
+++ b/templates/question.html
@@ -138,13 +138,18 @@ Next Question: {{q.title}}
             {% endif %}
         </form>
 
+        {% if task.project or task.can_transfer_owner %}
         <button class="btn btn-default" onclick="$('#need-help').slideToggle();">Get Help From Colleagues</button>
+        {% endif %}
 
         <ul id="need-help" style="display: none; padding: 0; margin-top: 1.25em">
+          {% if task.project %} {# discussions can't be tied to answers of tasks that aren't in a project #}
             <li id="start-a-discussion">
                 {# if you can see this page, you can start a conversation #}
                 <a href="javascript:start_a_discussion()">Start a team conversation about this question</a>
             </li>
+          {% endif %}
+          {% if task.can_transfer_owner %}
             <li>
               {% if write_priv %}
                 <a href="javascript:invite_to_transfer_editor()">Ask a colleague to finish this {% if q.type == "module" %}{{module.title}}{% endif %} module</a>
@@ -152,6 +157,7 @@ Next Question: {{q.title}}
                 The editor of this module can ask a colleague to finish this module
               {% endif %}
             </li>
+          {% endif %}
         </ul>
 
     </div> <!-- /question -->
