cant say 'go back to home' when the user has never been there yet

--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -33,7 +33,7 @@
       <p class="text-success">This module is complete.</p>
       <p><a href="{{supermodule.question.task.get_absolute_url}}" class="btn btn-primary">Continue Answering {{supermodule.question.task.title}} &raquo;</a></p>
     {% else %}
-      <p class="text-success">This module is complete. Go back to <a href="/">your home</a>.</p>
+      <p class="text-success">This module is complete. Go to <a href="/">your home</a> to work on other modules.</p>
     {% endif %}
   {% endwith %}
 
