--- a/templates/base.html
+++ b/templates/base.html
@@ -32,11 +32,13 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <style>
+            @import url(https://fonts.googleapis.com/css?family=Hind:400,700);
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
                 font-size: 16px;
                 overflow-y: scroll;
+                font-family: 'Hind', sans-serif;
             }
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
