deleting tasks, fixes #17
If a user has read privs on a task, then they see a message that the "module was deleted" when they try to go to it. Except discussion guests.

Also fixes a logic bug in testing if invitations have expired.

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,8 @@
 
         <link rel="stylesheet" href="{% static "css/main.css" %}">
 
+        {% block head %}{% endblock %}
+
         <!--[if lt IE 9]>
             <script src="static/js/html5-3.6-respond-1.1.0.min.js"></script>
         <![endif]-->
