--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,27 @@
 Home
 {% endblock %}
 
+{% block head %}
+<style>
+.task.deleted span {
+  color: #DDD;
+  text-decoration: line-through;
+}
+.task .delete-task {
+	display: none;
+	color: #F66;
+	cursor: pointer;
+  text-decoration: none;
+}
+	.task:hover .delete-task {
+		display: inline;
+	}
+  .task.deleted .delete-task:after {
+    content: "(undo)";
+  }
+</style>
+{% endblock %}
+
 {% block body %}
 <h1 style="margin: 1em 0">Home</h1>
 
@@ -43,7 +64,12 @@ Home
     {% if item.project %}<h4>Modules you are editing</h4>{% endif %}
     {% if item.tasks|length %}
       {% for task in item.tasks %}
-        <p><a href="{{task.get_absolute_url}}{% if not task.is_finished %}/start{% endif %}">{{task.title}}</a> ({{task.get_status_display}})</p>
+        <p class="task" data-id="{{task.id}}">
+          <span>
+        	 <a href="{{task.get_absolute_url}}{% if not task.is_finished %}/start{% endif %}">{{task.title}}</a> ({{task.get_status_display}})
+          </span>
+        	{% if task.user_has_write_priv %}<i class="delete-task glyphicon glyphicon-trash"></i>{% endif %}
+        </p>
       {% endfor %}
     {% endif %}
     {% if item.tasks|length == 0 %}
@@ -53,7 +79,12 @@ Home
     {% if item.others_tasks|length %}
       <h4>Other modules in this project (edited by others)</h4>
       {% for task in item.others_tasks %}
-        <p><a href="{{task.get_absolute_url}}">{{task.title}}</a> (edited by {{task.editor}}; {{task.get_status_display}})</p>
+        <p class="task" data-id="{{task.id}}">
+          <span>
+          	<a href="{{task.get_absolute_url}}">{{task.title}}</a> (edited by {{task.editor}}; {{task.get_status_display}})
+          </span>
+        	{% if task.user_has_write_priv %}<i class="delete-task glyphicon glyphicon-trash"></i>{% endif %}
+        </p>
       {% endfor %}
     {% endif %}
 
@@ -98,6 +129,25 @@ Home
 
 {% block scripts %}
 <script>
+$(function() {
+	$('.task .delete-task').click(function() {
+    var task_node = $(this).parent('p');
+		var task_id = task_node.attr('data-id');
+    var task_is_deleted = task_node.hasClass('deleted');
+    ajax_with_indicator({
+     url: '{% url "task_change_state" %}',
+     method: "POST",
+     data: {
+      id: task_id,
+      state: (task_is_deleted ? 'undelete' : 'delete')
+     },
+     success: function(res) {
+       task_node.toggleClass('deleted', !task_is_deleted);
+     }
+    });		
+	})
+})
+
 function invite_user_to_start_module(info) {
   var m = $('#start-module-' + info.project_id);
   if (m.val() == '') {
